apps/backend/base/20_rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gitops-backend
  annotations:
    notifications.argoproj.io/subscribe.on-rollout-completed.slack: "deployments"
    notifications.argoproj.io/subscribe.on-rollout-degraded.slack: "deployments,platform-alerts"
    notifications.argoproj.io/subscribe.on-rollout-paused.slack: "deployments"
    notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: "deployments,platform-alerts"
    notifications.argoproj.io/subscribe.on-analysis-run-error.slack: "platform-alerts"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gitops-backend
  progressDeadlineSeconds: 180
  progressDeadlineAbort: true
  strategy:
    canary:
      # enable analysis
      analysis:
        templates:
          - templateName: backend-memory-health
        startingStep: 1
        args:
          - name: canary-hash
            valueFrom:
              podTemplateHashValue: Latest
      steps:
        - setWeight: 25
        - pause: { duration: 60s }
        - setWeight: 50
        - pause: { duration: 60s }
        - setWeight: 100
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitops-backend
    spec:
      serviceAccountName: gitops-backend
      containers:
        - name: gitops-backend
          image: gitops-risk-control-backend
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
