apps/backend/base/30_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitops-backend
