apps/backend/base/62_netpol_allow_ingress_from_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-frontend
spec:
  # ingress only for frontend
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gitops-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: frontend
          podSelector:
            matchLabels:
              app.kubernetes.io/name: gitops-demo-frontend
      ports:
        - protocol: TCP
          port: 8080
